--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,16 @@
 </head>
 
 <body>
-    <section class="todoapp">
+    <section class="taskapp">
         <header class="header">
             <h1>Tareas</h1>
-            <input class="new-todo" placeholder="¿Qué necesita ser hecho?" autofocus>
+            <input class="new-task" placeholder="¿Qué necesita ser hecho?" autofocus>
         </header>
         <!-- This section should be hidden by default and shown when there are todos -->
         <section class="main">
             <input id="toggle-all" class="toggle-all" type="checkbox">
             <label for="toggle-all">Mark all as complete</label>
-            <ul class="todo-list">
+            <ul class="task-list">
                 <!-- These are here just to show the structure of the list items -->
                 <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
                 <!-- <li class="completed" data-id="abc">
@@ -42,11 +42,11 @@
         <!-- This footer should hidden by default and shown when there are todos -->
         <footer class="footer">
             <!-- This should be `0 items left` by default -->
-            <span class="todo-count"><strong>0</strong> pendiente(s)</span>
+            <span class="task-count"><strong>0</strong> pendiente(s)</span>
             <!-- Remove this if you don't implement routing -->
             <ul class="filters">
                 <li>
-                    <a class="selected filtro" class="selected" href="#/">Todos</a>
+                    <a class="selected filtro" href="#/">Todos</a>
                 </li>
                 <li>
                     <a class="filtro" href="#/active">Pendientes</a>
