--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task WebPack</title>
+    <link rel="icon" href="./assets/img/icono.png" type="image/png" />
 </head>
 
 <body>
@@ -65,6 +66,7 @@
         <!-- Change this out with your name and url ↓ -->
         <p>Creado por <a href="http://todomvc.com">ti</a></p>
         <p>Parte de <a href="http://todomvc.com">TodoMVC</a></p>
+        <p><a href="https://icons8.com/icon/25717/tarea">Tarea icon by Icons8</a></p>
     </footer>
 </body>
 
